--- a/templates/mode/inPersonStart.html
+++ b/templates/mode/inPersonStart.html
@@ -17,9 +17,9 @@
   <p id="timer">00:00:00</p>
   <div id=all>
   <!--面接官アイコン-->
-    <img src="" title="面接官アイコン1" id="aicon1" width="560px" height="420px">
-    <img src="" title="面接官アイコン2" id="aicon2" width="560px" height="420px">
-    <img src="" title="面接官アイコン3" id="aicon3" width="560px" height="420px">
+    <video src="" title="面接官アイコン1" id="aicon1" width="560px" height="420px"></video>
+    <video src="" title="面接官アイコン2" id="aicon2" width="560px" height="420px"></video>
+    <video src="" title="面接官アイコン3" id="aicon3" width="560px" height="420px"></video>
 
     <video id ="myVideo" class="myvideo" value="" name="myVideo" autoplay width="320px" height="240px"></video>
 
