--- a/static/css/mode/inPersonStart1.css
+++ b/static/css/mode/inPersonStart1.css
@@ -4,10 +4,6 @@
   height: 60%;
 }
 
-#all img {
-  width: 60%;
-}
-
 /*ストップウォッチ*/
 #timer {
   margin: auto;
@@ -21,8 +17,8 @@
   margin-left: 15%;
   border: 2px solid #4c444d;
   background-position: center;
-  width: 960px;
-  height: 720px;
+  width:63%;
+  height: 100%;
 }
 
 #aicon2 {
@@ -36,8 +32,8 @@
 .chara_speaking1{
     margin-left:15%;
     background-position:center;
-    width:960px;
-    height:720px;
+    width: 70%;
+    height: 80%;
     border:3px solid #f39649;
     animation:blink_c 0.7s ease-in-out infinite alternate;
 }
