--- a/static/css/mode/inPersonStart2.css
+++ b/static/css/mode/inPersonStart2.css
@@ -4,12 +4,6 @@
   height: 60%;
 }
 
-.all img {
-  float: left;
-  width: 45%;
-  border: 2px solid #000000;
-  background-position: center;
-}
 
 /*ストップウォッチ*/
 #timer {
@@ -24,8 +18,8 @@
     margin-left : 10%;
     border:2px solid #4c444d;;
     background-position:center;
-    width:760px;
-    height:570px;
+    width:40%;
+    height: 100%;
 }
 
 .chara_speaking1{
@@ -42,8 +36,8 @@
 #aicon2{
    border:2px solid #4c444d;
    background-position:center;
-   width:760px;
-   height:570px;
+   width:40%;
+   height: 100%;
 
 }
 
