--- a/static/css/mode/inPersonStart1.css
+++ b/static/css/mode/inPersonStart1.css
@@ -17,8 +17,8 @@
   margin-left: 15%;
   border: 2px solid #4c444d;
   background-position: center;
-  width:63%;
-  height: 100%;
+  width:960px;
+  height: 720px;
 }
 
 #aicon2 {
